Css stylings for todo overflow, fixed btn pointer
Made the todo container handle vertical overflow
and also made it so that if it does overflow,
the button pointer finger follows the buttons
relative to their positioning with the scroll
element. Put the absolute positioned button
pointer into a relative position html element.

--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,8 @@ dialog {
     gap: 30px;
     flex-shrink: 0;
     min-width: 1030px;
+    max-height: 650px;
+    overflow: auto;
 }
 
 .todo-card {
@@ -203,6 +205,7 @@ dialog {
     display: flex;
     align-items: center;
     gap: 5px;
+    position: relative;
 }
 
 .change-project-name-modal,
